--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.7.0",
     "fullpage.js": "^3.0.9",
     "jquery": "^3.3.1",
+    "mdbootstrap": "^4.19.1",
     "popper.js": "^1.12.9"
   }
 }
