--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "confusion",
   "version": "1.0.0",
+  "homepage": "http://Firoz-PS.githubio/imprintswebsite/",
   "description": "This is a website for imprints cmc",
   "main": "index.html",
   "scripts": {
@@ -11,16 +12,19 @@
     "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
     "imagemin": "imagemin images/* --out-dir=dist/images && imagemin gallery/* --out-dir=dist/gallery",
     "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html",
-    "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin"
+    "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cssmin": "^0.4.3",
+    "htmlmin": "0.0.7",
     "lite-server": "^2.3.0",
     "rimraf": "^2.6.2",
-    "imagemin": "imagemin img/* --out-dir='dist/img'",
-    "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html",
-    "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin"
+    "uglifyjs": "^2.4.11",
+    "usemin-cli": "^0.5.1"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
@@ -28,6 +32,7 @@
     "copyfiles": "^2.0.0",
     "font-awesome": "^4.7.0",
     "fullpage.js": "^3.0.9",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.3.1",
     "mdbootstrap": "^4.19.1",
     "popper.js": "^1.12.9"
