--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "confusion",
   "version": "1.0.0",
-  "homepage": "http://Firoz-PS.githubio/imprintswebsite/",
+  "homepage": "https://firoz-ps.github.io/imprintswebsite/",
   "description": "This is a website for imprints cmc",
   "main": "index.html",
   "scripts": {
